cloudformation/EC2andALBSG_template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Security Layer Template

Resources:
#--------------------------------------#
#Security Group for EC2
#--------------------------------------#
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH traffic
      VpcId: !ImportValue VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: EC2 Security Group



#--------------------------------------#
#Security Group for ALB
#--------------------------------------#
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Listener 80
      VpcId: !ImportValue VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: ALB Security Group

#--------------------------------------#
#Outputs for Cross Stack Reference
#--------------------------------------#
Outputs:
  SGforEC2:
    Description: Security Group for EC2
    Value: !Ref EC2SecurityGroup
    Export:
      Name: EC2-SecurityGroup


  
  SGforALB:
    Description: Security Group for ALB
    Value: !Ref ALBSecurityGroup
    Export:
      Name: ALB-SecurityGroup
